# nanoGPT

./: sample.py  sample_hindi.py  sample_tt.py
config/: finetune_teluguwiki.py  train_gulsaahil.py  train_telugu_wiki1.py  train_vemana.py  train_vemana_tt.py
data/gulsaahil/: Generated.txt  Lyrics.txt  Validate.txt  hindivocab.json  prepare.py
data/telugu_wiki1/: prepare.py  smf.json
data/vemana/: Generated.txt  prepare.py  satakam.txt  smf.json
data/vemana2/: Generated-2.txt  prepare.py  satakam.txt
data/vemana_tt/: prepare.py  validation.txt
src/brahmi_script/: Cargo.toml  pyproject.toml
src/brahmi_script/src/: lib.rs
