[package]
name = "brahmi_script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "brahmi_script"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
